# swift_rust

./: README.md
rust_code/: .gitignore  Cargo.toml  build.sh  uniffi.toml
rust_code/bindings/: apple.swift  module.h  module.modulemap
rust_code/src/: apple.udl  lib.rs
rust_code/uniffi-bindgen/: Cargo.toml
