[package]
name = "rust_code"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]
name = "apple"

[workspace]
members = [".", "uniffi-bindgen"]

[dependencies]
uniffi = { version = "0.29.2", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.29.2", features = ["build"] }